[gd_scene load_steps=9 format=3 uid="uid://b4v27t3l4r45k"]

[ext_resource type="Script" path="res://scene/game/tower/tower.gd" id="1_7jp0g"]
[ext_resource type="PackedScene" uid="uid://cg000ebl3e3bd" path="res://scene/game/tower/upgrade_indicator.tscn" id="2_rjro5"]
[ext_resource type="SpriteFrames" uid="uid://cyjum2ytppyf0" path="res://resource/unit/trap.tres" id="3_hmv7j"]

[sub_resource type="Gradient" id="Gradient_jmtxo"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_8n3x1"]
gradient = SubResource("Gradient_jmtxo")
width = 16
height = 32
fill_from = Vector2(0.543103, 1)
fill_to = Vector2(0.50431, 0)

[sub_resource type="CircleShape2D" id="CircleShape2D_q3pdp"]

[sub_resource type="Gradient" id="Gradient_1k1vy"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_t7b71"]
gradient = SubResource("Gradient_1k1vy")
width = 4
height = 2

[node name="tower" type="Node2D"]
texture_filter = 1
script = ExtResource("1_7jp0g")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -6)
texture = SubResource("GradientTexture2D_8n3x1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("3_hmv7j")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_q3pdp")

[node name="UpTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
autostart = true

[node name="upgrade_speed" parent="." instance=ExtResource("2_rjro5")]
position = Vector2(0, 3)
texture = SubResource("GradientTexture2D_t7b71")

[node name="upgrade_dmg" parent="." instance=ExtResource("2_rjro5")]
position = Vector2(0, 3)

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
